@@ -1,3 +1,10 @@
+2006-01-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR libstdc++/25797
+	* acinclude.m4 (GLIBCXX_CHECK_LINKER_FEATURES): Remove -Werror
+	from CFLAGS.  Check if linker really supports --gc-sections.
+	* configure: Regenerated.
+
 2006-01-18  Paul Brook  <paul@codesourcery.com>
 
 	* libsupc++/eh_personality.cc (PERSONALITY_FUNCTION): Use std::abort.
